feat : [Problem5] 특정 단위의 지폐 개수를 계산하는 메소드 추가